--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-    margin: 0 5%;
+    margin: 0 calc((100% - 1027px)/3);
     min-height: 100%;
     background-color: var(--bg-colour);
     display: flex;
@@ -32,7 +32,7 @@ footer {
     width: 100%;
 }
 
-.pad {
+.vpad {
     height: 33px;
 }
 
@@ -59,24 +59,31 @@ footer {
     flex-grow: 1;
 }
 
+.item-a {
+    min-height: 297px;
+}
+
 .item-b {
     aspect-ratio: 16/9;
     background-color: var(--primary-color);
-    min-height: 297px;
+    min-height: 198px;
     max-height: 450px;
 }
 
 .item-c {
     background-color: var(--accent-color);
-    min-height: 99px;
+    min-height: 297px;
 }
 
-
-@media screen and (max-width: 1142px) {
+@media screen and (max-width: 1027px) {
     body {margin:0;}
-    .pad, footer {display: none;}
+}
+
+@media screen and (max-width: 749px) {
+    .vpad, footer {display: none;}
     .container {flex-flow: column;}
-    .item-b {min-height: 198px; order: 1;}
-    .item-a, .item-c {order:0}
-    .item-e {max-height: 148px;}
+    .item-a {order:0; min-height: 33px;}
+    .item-b {min-height: 198px; max-height: 300px; order: 1;}
+    .item-c {order:0; min-height: 99px;}
+    .item-d, .item-e {max-height: 148px;}
 }
