--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,7 @@
     color: var(--txt-color);
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box; 
-    overflow: hidden;
+    box-sizing: border-box;
 }
 
 html { 
@@ -42,7 +41,7 @@ footer {
     display: flex;
 }
 
-.item {
+.sect {
     position: relative;
     flex-grow: 1;
     background-color: var(--secondary-color);
@@ -53,14 +52,20 @@ footer {
     min-height: 33px;
 }
 
-.button {
+.item {
+    position: absolute;
+    display: flex;
+    align-items: center;
     background-color: var(--bg-colour);
     border-style: solid;
-    border-width: 10px;
+    border-width: 2px;
     border-color: var(--txt-color);
-    position: absolute;
+    border-radius: 2px;
+    box-shadow: 0px 0px 3px var(--txt-color);
+    height: 15%;
     width: 95%;
-    margin: 2.5%;
+    margin: 5px;
+    padding: 2.5% 3%;
 }
 
 .container-page {
@@ -72,20 +77,46 @@ footer {
     flex-grow: 1;
 }
 
-.item-a {
+.sect-a {
     min-height: 297px;
+    display: flex;
 }
 
-.item-b {
+.sect-b {
     aspect-ratio: 16/9;
     background-color: var(--primary-color);
     min-height: 198px;
     max-height: 450px;
 }
 
-.item-c {
+.sect-c {
     background-color: var(--accent-color);
     min-height: 297px;
+}
+
+.sect-e {
+    background-color: var(--accent-color);
+}
+
+.item-b {
+    top: 17.5%;
+}
+
+.item-c {
+    top: 35%;
+}
+
+.item-d {
+    background-color: rgba(0, 0, 0, 0);
+    box-shadow: none;
+    justify-content: center;
+    height: 42.5%;
+    bottom: 0;
+}
+
+.item-e {
+    margin: 0;
+    width: 100%;
 }
 
 @media screen and (max-width: 1027px) {
@@ -95,8 +126,11 @@ footer {
 @media screen and (max-width: 749px) {
     .vpad, footer {display: none;}
     .container {flex-flow: column;}
-    .item-a {order:0; min-height: 33px;}
-    .item-b {min-height: 198px; max-height: 300px; order: 1;}
-    .item-c {order:0; min-height: 99px;}
-    .item-d, .item-e {max-height: 148px;}
+    .item {position: static; justify-content: center; height: auto; flex-grow: 1; margin: 0.375%; padding: 0%;}
+    .sect-a {order:0; min-height: 44px; display: flex; flex-flow: row;}
+    .sect-b {min-height: 198px; max-height: 300px; order: 1;}
+    .sect-c {order:0; min-height: 88px;}
+    .sect-d {order: 3; max-height: 148px;}
+    .sect-e {order: 2; max-height: 148px;}
+    .item-d {order: -1;}  
 }
