--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,11 +30,18 @@ body {
 
 footer {
     min-height: 33px;
+    display: flex;
+    justify-content: center;
     width: 100%;
 }
 
 .vpad {
     height: 33px;
+}
+
+.hpad {
+    flex-grow: 2;
+    width: 100%;
 }
 
 .container {
@@ -78,8 +85,9 @@ footer {
 }
 
 .sect-a {
+    direction: rtl;
+    overflow-y: hidden;
     min-height: 297px;
-    display: flex;
 }
 
 .sect-b {
@@ -91,10 +99,11 @@ footer {
 
 .sect-c {
     background-color: var(--accent-color);
+    overflow-y: hidden;
     min-height: 297px;
 }
 
-.sect-e {
+.sect-d {
     background-color: var(--accent-color);
 }
 
@@ -115,8 +124,37 @@ footer {
 }
 
 .item-e {
+    /* Permalink - use to edit and share this gradient:
+    https://colorzilla.com/gradient-editor/#1e5799+0,000000+0,7db9e8+100&1+19,0+100 */
+    background: linear-gradient(to bottom, rgba(0,0,0,0.75) 0%,rgba(0,0,0,0.75) 7%,rgba(0,0,0,0.05) 86%,rgba(0,0,0,0) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    border-style: none;
+    box-shadow: none;
+    justify-content: center;
     margin: 0;
+    height: calc(15% + 10px);
     width: 100%;
+}
+
+.char-art {
+    background-color: var(--txt-color);
+    box-shadow: none;
+    justify-content: center;
+    height: 42.5%;
+}
+
+.stats {
+    background-color: var(--secondary-color);
+    height: calc(57.5% - 15px);
+    bottom: 0;
+    flex-flow: column;
+}
+
+.stats-sub {
+    text-align: center;
+    font-size: smaller;
+    height: 100%;
+    flex-grow: 1;
 }
 
 @media screen and (max-width: 1027px) {
@@ -125,12 +163,18 @@ footer {
 
 @media screen and (max-width: 749px) {
     .vpad, footer {display: none;}
+    .hpad {display: block;}
     .container {flex-flow: column;}
     .item {position: static; justify-content: center; height: auto; flex-grow: 1; margin: 0.375%; padding: 0%;}
     .sect-a {order:0; min-height: 44px; display: flex; flex-flow: row;}
     .sect-b {min-height: 198px; max-height: 300px; order: 1;}
-    .sect-c {order:0; min-height: 88px;}
+    .sect-c {order:0; min-height: 88px; display: flex; flex-flow: row;}
     .sect-d {order: 3; max-height: 148px;}
     .sect-e {order: 2; max-height: 148px;}
-    .item-d {order: -1;}  
+    .item-a, .item-b, .item-c, .item-d {min-width: 80px;}
+    .item-d {justify-content: flex-end;}  
+    .item-e {margin: 0; height: calc(15% + 10px);}
+    .char-art {order: 1; max-width: 100px;}
+    .stats {flex-flow: row; direction: rtl; padding: 10px;}
+    .stats-sub {text-align: right; align-content: center;}
 }
