--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,13 +35,24 @@ footer {
     width: 100%;
 }
 
-.vpad {
+.ribbon {
+    display: flex;
+    padding: 5px;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: var(--bg-colour);
     height: 33px;
 }
 
 .hpad {
     flex-grow: 2;
     width: 100%;
+}
+
+.accounts {
+    background-color: var(--primary-color);
+    height: 23px;
+    width: 90px;
 }
 
 .container {
@@ -126,6 +137,7 @@ footer {
     background: linear-gradient(to bottom, rgba(0,0,0,0.75) 0%,rgba(0,0,0,0.75) 7%,rgba(0,0,0,0.05) 86%,rgba(0,0,0,0) 100%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     border-style: none;
+    border-radius: 0%;
     box-shadow: none;
     justify-content: center;
     margin: 0;
@@ -163,11 +175,11 @@ footer {
 }
 
 @media screen and (max-width: 749px) {
-    .vpad, footer {display: none;}
+    .ribbon, footer {display: none;}
     .hpad {display: block;}
     .container {flex-flow: column;}
     .item {position: static; justify-content: center; height: auto; flex-grow: 1; margin: 0.375%; padding: 0%;}
-    .sect-a {order:0; min-height: 44px; display: flex; flex-flow: row;}
+    .sect-a {order:0; min-height: 44px; display: flex; flex-flow: row; overflow: hidden;}
     .sect-b {min-height: 198px; max-height: 300px; order: 1;}
     .sect-c {order:0; min-height: 88px; display: flex; flex-flow: row;}
     .item-a, .item-b, .item-c, .item-d {min-width: 80px;}
