--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --bg-colour: #0C1019;
     --txt-color: #E8E4E1;
-    --accent-color: #A5A9B4;
+    --accent-color: #54565e;
     --secondary-color: #3D4F75;
     --primary-color: #476891;
 }
