--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,7 @@ footer {
     background: linear-gradient(to bottom, rgba(0,0,0,0.75) 0%,rgba(0,0,0,0.75) 7%,rgba(0,0,0,0.05) 86%,rgba(0,0,0,0) 100%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     border-style: none;
+    border-radius: 0%;
     box-shadow: none;
     justify-content: center;
     margin: 0;
@@ -167,7 +168,7 @@ footer {
     .hpad {display: block;}
     .container {flex-flow: column;}
     .item {position: static; justify-content: center; height: auto; flex-grow: 1; margin: 0.375%; padding: 0%;}
-    .sect-a {order:0; min-height: 44px; display: flex; flex-flow: row;}
+    .sect-a {order:0; min-height: 44px; display: flex; flex-flow: row; overflow: hidden;}
     .sect-b {min-height: 198px; max-height: 300px; order: 1;}
     .sect-c {order:0; min-height: 88px; display: flex; flex-flow: row;}
     .item-a, .item-b, .item-c, .item-d {min-width: 80px;}
