--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,11 +167,61 @@ footer {
     flex-grow: 1;
 }
 
+.log-view {
+    font-family: 'Consolas';
+    letter-spacing: 0.05em;
+    flex-flow: column;
+    align-items: flex-start;
+    overflow-y: scroll;
+    background-color: var(--bg-colour);
+    border-style: none;
+    box-shadow: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: calc(100% - 2em);
+}
+
+.log-entry {
+    padding: 0 0.3em;
+}
+
+.log-input {
+    background-color: var(--bg-colour);
+    border-style: none;
+    border-top: 0.1em solid var(--txt-color);
+    box-shadow: none;
+    padding: 0;
+    margin: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2em;
+}
+
+
+#typeInputEl {
+    padding: 0.3em;
+    background-color: var(--bg-colour);
+    border-style: none;
+    color: var(--txt-color);
+    width: 100%;
+    height: 2em;
+}
+
+#enterInputEl {
+    height: auto;
+    padding: 0.3em;
+    border-style: none;
+    border-left: 0.1em solid var(--txt-color);
+    background-color: var(--bg-colour);
+    color: var(--txt-color);
+}
+
 @media screen and (max-width: 1027px) {
     body {margin:0;}
     .row-b {flex-flow: column;}
-    .console-view {order: 3;}
-    .inv-view {order: 2; max-height: 148px;}
+    .console-view {order: 3; flex-grow: 2;}
+    .inv-view {order: 2; max-height: 148px; min-height: 72px;}
 }
 
 @media screen and (max-width: 749px) {
@@ -190,4 +240,5 @@ footer {
     .head-stats {direction:ltr;  text-align: right; align-content: center; border-left: 1px solid black;}
     .info1-stats {direction:ltr;  text-align: left; align-content: center; border-left: 1px solid black; padding-left: 10px;}
     .info2-stats {direction:ltr;  text-align: left; align-content: center;}
+    .log-input {position: absolute;}
 }
