--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,9 @@ footer {
     background-color: var(--primary-color);
     min-height: 198px;
     max-height: 450px;
+    display: flex;
+    flex-flow: column;
+    justify-content: end;
 }
 
 .char-view {
@@ -135,7 +138,9 @@ footer {
     https://colorzilla.com/gradient-editor/#1e5799+0,000000+0,7db9e8+100&1+19,0+100 */
     background: linear-gradient(to bottom, rgba(0,0,0,0.75) 0%,rgba(0,0,0,0.75) 7%,rgba(0,0,0,0.05) 86%,rgba(0,0,0,0) 100%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    z-index: 99;
+    z-index: 1;
+    position: absolute;
+    top: 0;
     border-style: none;
     border-radius: 0%;
     box-shadow: none;
@@ -176,14 +181,24 @@ footer {
     background-color: var(--bg-colour);
     border-style: none;
     box-shadow: none;
-    padding: 0;
+    padding: 0.1em 0;
     margin: 0;
     width: 100%;
-    height: calc(100% - 2em);
+    height: calc(100% - 3em);
 }
 
 .log-entry {
     padding: 0 0.3em;
+}
+
+.scene-option {
+    background: linear-gradient(to right, rgba(0,0,0,0.75) 0%,rgba(0,0,0,0.75) 7%,rgba(0,0,0,0.05) 86%,rgba(0,0,0,0) 100%);
+    display: block;
+    white-space: nowrap;
+    top:100px;
+    height: 2em;
+    width: 8em;
+    padding: 0.3em;
 }
 
 .log-input {
@@ -195,7 +210,7 @@ footer {
     margin: 0;
     bottom: 0;
     width: 100%;
-    height: 2em;
+    height: 3em;
 }
 
 
@@ -205,12 +220,12 @@ footer {
     border-style: none;
     color: var(--txt-color);
     width: 100%;
-    height: 2em;
+    height: 3em;
 }
 
 #enterInputEl {
     height: auto;
-    padding: 0.3em;
+    padding: 1em;
     border-style: none;
     border-left: 0.1em solid var(--txt-color);
     background-color: var(--bg-colour);
